force-app/main/default/objects/Logger_Event__e/fields/Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>Exception_Details__c</fullName>
    <description>Exception Details if any</description>
    <label>Exception Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>