force-app/main/default/objects/Logger_Event__e/fields/Generic_Id__c.field-meta.xml
<CustomField>
    <fullName>Generic_Id__c</fullName>
    <description>Identifier/Context for the log</description>
    <label>Generic Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>