force-app/main/default/objects/Logger_Event__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>Log level of the log event</description>
    <label>Log Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>