force-app/main/default/objects/Logger_Event__e/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>Id of the running user publishing log event</description>
    <label>User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>